# scan-search

./: local.db  package-lock.json  package.json
sqlite/: local.db
sqlite/extensions/: macos-arm-vector.dylib
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  fs_crawler.rs  handlers.rs  lib.rs  main.rs  timer.rs
src/routes/: +page.svelte
